<!--> Eshan Salwan, n01422232, RNB <-->
<resources>
    <string name="app_name">EshanSalwan, n01422232</string>
    <string name="btn">Enter</string>
    <string name="Description">This app helps its clients to find the best option for a home.</string>
    <string name="rB1">Apartment</string>
    <string name="rB2">Detached Home</string>
    <string name="rB3">Semi-Detached Home</string>
    <string name="help">Help</string>
    <string name="rent">Rent</string>
    <string name="home">Home</string>
    <string name="textview">Apartment Options</string>
    <string name="cB1">50 Front Street\n Listed for $549/Month</string>
    <string name="cB2">2045 Whitehall Road\n Listed for $999/Month</string>
    <string name="cB3">79 Forest Ave\n Listed for 1699/Month</string>
    <string name="textview3">Semi-Detached Home Options</string>
    <string name="textview2">Detached Home Options</string>
    <string name="dcheckb1">26 Rocky Road\n Listed for $799/Month</string>
    <string name="dcheckb2">147 Richlong Street\n Listed for $1299/Month</string>
    <string name="dcheckb3">3 lakehill Road\n Listed for $2000/Month</string>
    <string name="scheckb1">105 Orchard Way\n Listed for $625/Month</string>
    <string name="scheckb2">89 Moss Lane\n Listed for $1150/Month</string>
    <string name="scheckb3">12 Mill Street\n Listed for 1899/Month</string>
    <string name="button1">Payment</string>
    <string name="button2">Payment</string>
    <string name="button3">Payment</string>
    <string name="pay">Billing Info</string>
    <string name="hintname">Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="credit">Credit Card</string>
</resources>