<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eshanRent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="229dp"
        android:layout_height="246dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/rB1"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="104dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:text="@string/rB2"
            tools:layout_editor_absoluteX="81dp"
            tools:layout_editor_absoluteY="204dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="203dp"
            android:layout_height="79dp"
            android:text="@string/rB3"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="254dp" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="291dp"
        android:layout_height="154dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next_button" />
</androidx.constraintlayout.widget.ConstraintLayout>